<resources>
    <string name="app_name">MyguitarClass</string>
    <string name="title_activity_settings">Settings</string>
    <string name="pref_dark_theme_key" translatable="false">pref_dark_theme</string>
    <string name="pref_dark_theme_title">Dark theme</string>
    <string name="pref_tuning_key" translatable="false">pref_tuning</string>
    <string name="pref_tuning_title">Tuning</string>
    <string name="action_settings">Settings</string>
    <string name="foo">Set tings</string>
    <string name="standard_tuning">Standard</string>
    <string name="open_a_tuning">Open A</string>
    <string name="open_g_tuning">Open G</string>
    <string name="open_d_tuning">Open D</string>
    <string name="drop_d_tuning">Drop D</string>
    <string name="standard_tuning_val" translatable="false">Standard</string>
    <string name="open_a_tuning_val" translatable="false">Open A</string>
    <string name="open_g_tuning_val" translatable="false">Open G</string>
    <string name="open_d_tuning_val" translatable="false">Open D</string>
    <string name="drop_d_tuning_val" translatable="false">Drop D</string>
    <string-array name="pref_tuning_entries">
        <item>@string/standard_tuning</item>
        <item>@string/open_a_tuning</item>
        <item>@string/open_g_tuning</item>
        <item>@string/open_d_tuning</item>
        <item>@string/drop_d_tuning</item>
    </string-array>
    <string-array name="pref_tuning_values">
        <item>@string/standard_tuning_val</item>
        <item>@string/open_a_tuning_val</item>
        <item>@string/open_g_tuning_val</item>
        <item>@string/open_d_tuning_val</item>
        <item>@string/drop_d_tuning_val</item>
    </string-array>
    <string name="permission">Permission</string>
    <string name="permission_record_audio">The app must be able to use the microphone.</string>
    <string name="audio_record_init_error">Could not initialize AudioRecord.</string>
    <string name="pref_privacy_policy_title">Privacy policy</string>
    <string name="pref_privacy_policy_key" translatable="false">pref_privacy_policy</string>
    <string name="back">Назад</string>
    <string name="lessonEight1">Сегодня мы продолжим изучать бой с перебором, но уже на другой схеме. <br/>
И так, переходим к песне. Она играется следующим образом. Куплет играется боем с перебором на таких аккордах:</string>
    <string name="lessonEight2">Весь куплет играется на этих четырех аккорда</string>
    <string name="lessonEight3">G – 6-3-вниз-вверх (2 раза)<br/>
C – 5-3-вниз-вверх<br/>
G – 6-3-вниз-вверх<br/>
C – 5-3-вниз-вверх<br/>
G – 6-3-вниз-вверх<br/>
D – 4-3-вниз-вверх<br/>
Em – 6-3-вниз-вверх</string>
    <string name="lessonEight4">В припеве мы переходим на бой№1 без заглушки щелчка (вниз-вверх-щелчок-вверх). Играем такие аккорды:<br/>
G (2 раза)-C-G (3 раза)-D-Em.</string>
    <string name="lessonEight5">Так же, если у вас еще есть проблемы с перебором, попробуйте поиграть следующий перебор на любых аккордах.<br/>
Если у вас все получилось, то на этом этапе проблем с перебором у вас больше не будет.<br/>
Перебор звучит так: Тоника-3-2-3-1-3-2-3.</string>
    <string name="lessonEight6">Напоминаю, что тоника – это басовая струна аккорда. Ей может быть 6-4 струна.</string>
    <string name="lessonEighteen1">Сегодня мы совместим бой №1 и бой №2 и сыграем песню группы Кино «Звезда».<br/>
Играется этот совмещенный бой вот так:<br/>
Вниз-щелчок-вверх-вниз-вверх-щелчок-вверх.<br/>
Щелчок не глушим.<br/>
Особенностью этого урока является то, что в некоторых пестах мы будем играть на аккорде не целое количество боев.</string>
    <string name="lessonEighteen2">Например, вступление этой песни играется на таких аккордах:<br/>
Em D Em D G D G D<br/>
Все аккорды берутся на баррэ.<br/>
И мы играем полтора боя на первом аккорде, и оставшиеся пол боя на втором. Звучит это так:</string>
    <string name="lessonEighteen3">Поделенный бой во вступлении</string>
    <string name="lessonEighteen4">Вступление и куплет играется на баррэ, а припев на обычных аккордах. Аккорды в куплете такие:<br/>
    Em D G G<br/>
    Am D Em Em</string>
    <string name="lessonEighteen5">"Аккорды припева:<br/>
G D EmE m<br/>
В конце припева, после аккорда D сразу переходим на проигрыш, который играется так же, как вступление."</string>
    <string name="lessonEleven1">В этом уроке мы научимся играть песню «Дыхание» группы Наутилус помпилиус.</string>
    <string name="lessonEleven2">Основной акцент только на левую руку. Играем по одному разу боем №2 на каждом аккорде. Аккорды в куплете такие:<br/>
F C Dm A<br/>
A# F Gm Dm<br/>
В припеве аккорды идут в такой последовательности:<br/>
Dm C Dm A#<br/>
Как ставить эти аккорды будет показано ниже.</string>
    <string name="lessonEleven3">Те аккорды, которые можно поставить не на баррэ можете ставить по-обычному. После того, как у вас не будет задержки с перехода с одного аккорда на другой, попробуйте играть уже все аккорды на баррэ.</string>
    <string name="lessonEleven4">Аккорд C можно ставить как без баррэ, так и на 3 или 8 ладу. Как ставить аккорд C на 3 ладу вы знаете, а на 8 ладу он ставится точно так же, как аккорд A на 5 ладу. Просто сдвиньте руку на 3 лада. Тоже самое можно сделать и с аккордом A#. На картинке выше показано, как ставить этот аккорд на 1 ладу. Его так же можно поставить и на 6 ладу. Ставите аккорд A на баррэ и сдвигаете на 1 лад.</string>
    <string name="lessonEleven5">Таким образом, вы уже понимаете, что один и тот же аккорд можно ставить в разных позициях.</string>
    <string name="lessonFifteen1">И так, вы поиграли ритм Регги из предыдущего урока несколько дней.</string>
    <string name="lessonFifteen2">Теперь беремся за следующую часть. Казалось бы, тоже самое, но теперь вместо глухого удара мы топаем ногой. Это нужно для того, чтобы ногой вы контролировали счет, а вы при этом чувствовали эту слабую долю, не играя ее.<br/>
При всей своей легкости руки могут путаться, хотя здесь всего два удара.</string>
    <string name="lessonFifteen3">И третья часть задания – и топать ногой, и играть глухой удар.<br/>
Попробуйте сыграть это, и вы удивитесь, насколько ваши руки и ноги привыкли работать вместе. Этот урок поможет вам раскоординировать ваши руки и ноги для дальнейшего обучения игры на гитаре в НЕ дворовом стиле.</string>
    <string name="lessonFifteen4">В следующем уроке мы продолжим эту тему, только правая рука будет играть более кратные числа. Из звучных и не звучных ударов мы начнем делать целые рисунки.</string>
    <string name="lessonFive1">Все ритмы, которые мы играли, относятся к ритмам, которые делятся на 2, то есть кратные двум.
А сегодня мы выучим ритм, который будет считаться на три четверти. Играется он вот так:</string>
    <string name="lessonFive2">На картинке ниже будет показано, как играть этот бой вместе с вокалом.</string>
    <string name="lessonFive3">Бой на 3/4</string>
    <string name="lessonFive4">Весь припев будет играть на таких аккордах:<br/>
G D Am Em<br/>
G D Am H7<br/>
Куплет играется по 2 боя на каждом аккорде. Аккорды такие:<br/>
Em H7 Am Em<br/>
Em H7 Am Em<br/>
Так же, припев можно играть, не глуша щелчок, как мы играли в песне «Просвистела».</string>
    <string name="lessonFour1">Сегодня мы немного разнообразим то, что мы уже прошли. В прошлом уроке мы совместили в одной песне два боя, а сегодня мы разучим песню, которая играется полностью Боем №2, но играется она быстро.</string>
    <string name="lessonFour2">Особенностью является то, что в припеве мы будем играть без заглушки(щелчка). Вместо него мы будем просто бить по струнам вниз. Получается так:</string>
    <string name="lessonFour3">Бой №2 без заглушки</string>
    <string name="lessonFour4">Вся песня играется Боев №2 по одному бою на каждый аккорд, а аккорды такие:<br/>
Em C G H7.<br/>
В провой руке мы продолжаем учиться играть быстро и разнообразно, а левой рукой продолжаем переставлять аккорды быстро.</string>
    <string name="lessonFourteen1">Я надеюсь, вы довели предыдущий урок до автоматизма. Потому что этот автоматизм в правой руке нам сегодня пригодится.</string>
    <string name="lessonFourteen2">Сегодня мы изучим ритм Регги, это ритм, который играется на слабую долю. Особенность этого ритма в том, что во всех ритмах которые мы изучали до этого урока акцент был на счет, то есть РАЗ и ДВА и ТРИ и ЧЕТЫРЕ.<br/>
Особенность ритма Регги в том, что в нем акцент идет не на цифры РАЗ, ДВА, ТРИ, ЧЕТЫРЕ, а на буквы «и». И раз И два И три.<br/>
На цифрах, как правило, тишина, а на «и» идут удары</string>
    <string name="lessonSixteen1">Этот урок является продолжением предыдущих двух уроков. На прошлом уроке мы учились играть ритм Регги, состоящий из двух ударов вниз.<br/>
Сегодня правая рука будет работать немного быстрее. И так. Берем за основу движение, которое мы играли в бое-галоп. Только там мы играли по 3 удара, а сегодня мы будем играть просто вниз-вверх. Два глухих удара, два звучных.<br/>
Будет звучать это вот так:</string>
    <string name="lessonSixteen2">Ритм Регии</string>
    <string name="lessonSixteen3">А теперь попробуйте совместить изученное. Сыграйте аккорд А двумя ударами(глухой-звучный), а аккорд FM# четырьмя ударами(глухой-глухой-звучный-звучный).</string>
    <string name="lessonSixteen4">Теперь, усложним задачу еще сильнее. На аккорде А добавим один звучный удар вверх, то есть ритмический рисунок будет выглядеть вот так: вниз глухой-вниз звучный-вверх звучный. Мы как бы совместили два пройденных ритмических рисунка.<br/>
На самом деле это не сложно, нужно просто немного попрактиковаться.</string>
    <string name="lessonSixteen5">Допустим, вы какое-то время попрактиковались и уже без проблем можете любым из изученных ритмов-регги сыграть любые комбинации аккордов.\n
Теперь давайте на аккорде FM# добавим вот такую взбивку. Звучит она так:</string>
    <string name="lessonSixteen6">Как видите, мы постоянно меняем местами заглушенные и звучные ноты.<br/>
Пробуйте играть аккорд А любым из изученных боев, а аккорд FM# взбивкой.</string>
    <string name="lessonSixteen7">По сути, все что мы научились играть – это один и тот же бой, который просто имеет разные акценты. А по факту, весь бой укладывается в один ритмический рисунок.</string>
    <string name="lessonZero1">Стандартный строй гитары состоит из следующих нот:<br/>
Первая струна – e;<br/>
Вторая струна – B;<br/>
Третья струна – G;<br/>
Четвертая струна – D;<br/>
Пятая струна – A;<br/>
Шестая струна – E;</string>
    <string name="lessonZero2">Самый лучший и полезный способ настройки — это настройка гитары на слух.</string>
    <string name="lessonZero3">Чтобы настроить первую струну нажмите на кнопку «е». Вы услышите, как должна звучать первая струна. Ваша задача – подтянуть вашу струну до того тона, который вы слышите после нажатия на кнопку.  Точно так же настраиваются и другие струны.</string>
    <string name="lessonZero4">Будьте осторожны и крутите колки медленно. Быстрое изменение тона струны может привести к ее разрыву.</string>
    <string name="lessonZero5">Вторая струна – кнопка «B», третья – «G» и так далее.</string>
    <string name="lessonZero6">Проверить правильно ли вы настроили гитару можно следующим способом. Зажмите вторую струну на пятом ладу. Она должна звучать в унисон (то есть одинаково) с первой открытой струной.</string>
    <string name="lessonZero7">Третью струну зажмите на четвертом ладу. Она должна звучать в унисон со второй струной.<br/>
Четвертую на пятом ладу, которая будет звучать так же как и открытая третья струна.<br/>
Пятую тоже на пятом ладу. Она будет созвучна с уже с четвертой открытой струной.<br/>
И шестую на пятом ладу – звучание будет как на пятой открытой струне.</string>
</resources>