<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color">
    <LinearLayout android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/background_color"
        android:orientation="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/back"
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:text="@string/back"
                app:backgroundTint="@color/purple_700"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.049"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.023" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/background_color"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lessonZero1"
                android:textSize="20sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lessonZero2"
                android:textSize="20sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lessonZero3"
                android:textSize="20sp" />
        </LinearLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/stringD"
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:layout_marginEnd="100dp"
                android:layout_marginRight="100dp"
                android:background="@drawable/custom_button"
                android:text="D"
                android:textAllCaps="false"
                android:textSize="30sp"
                app:backgroundTint="@color/black"
                app:layout_constraintBottom_toBottomOf="@+id/button34"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.084"
                app:layout_constraintStart_toStartOf="@+id/imageView3"
                app:layout_constraintTop_toTopOf="@+id/imageView3"
                app:layout_constraintVertical_bias="0.29" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/stringG"
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:layout_marginStart="100dp"
                android:layout_marginLeft="100dp"
                android:background="@drawable/custom_button"
                android:text="G"
                android:textAllCaps="false"
                android:textSize="30sp"
                app:backgroundTint="@color/black"
                app:layout_constraintBottom_toBottomOf="@+id/imageView3"
                app:layout_constraintEnd_toEndOf="@+id/imageView3"
                app:layout_constraintHorizontal_bias="0.908"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/imageView3"
                app:layout_constraintVertical_bias="0.269" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/stringA"
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:layout_marginStart="100dp"
                android:layout_marginLeft="100dp"
                android:background="@drawable/custom_button"
                android:text="A"
                android:textAllCaps="false"
                android:textSize="30sp"
                app:backgroundTint="@color/black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/stringG"
                tools:ignore="MissingConstraints" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/stringB"
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:layout_marginEnd="100dp"
                android:layout_marginRight="100dp"
                android:background="@drawable/custom_button"
                android:text="B"
                android:textAllCaps="false"
                android:textSize="30sp"
                app:backgroundTint="@color/black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/stringD"
                tools:ignore="MissingConstraints" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/stringE"
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:layout_marginStart="100dp"
                android:layout_marginLeft="100dp"
                android:background="@drawable/custom_button"
                android:text="E"
                android:textAllCaps="false"
                android:textSize="30sp"
                app:backgroundTint="@color/black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/stringA" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/stringe"
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:layout_marginEnd="100dp"
                android:layout_marginRight="100dp"
                android:background="@drawable/custom_button"
                android:text="e"
                android:textAllCaps="false"
                android:textSize="30sp"
                app:backgroundTint="@color/Colki_Color"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/stringB" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lessonZero4"
            android:textSize="20sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lessonZero5"
            android:textSize="20sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lessonZero6"
            android:textSize="20sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lessonZero7"
            android:textSize="20sp" />

    </LinearLayout>


</ScrollView>